# agent-loop

./: .importlinter  ARCHITECTURE.md  README.md  agent-loop.py  prek.toml  pyproject.toml  ruff.toml  ty.toml
.claude/agents/: spec-drift-analyzer.md
.claude/skills/analyze-spec-drift/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml
specs/: README.md  agent-backend.md  architecture.md  issue-tracker.md  ralph.md  vcs-backend.md
src/agency/: README.md  __init__.py  __main__.py  cli.py
src/agency/domain/: README.md  config.py  context.py  errors.py
src/agency/domain/loop/: engine.py  strategies.py  termination.py  work.py
src/agency/domain/ports/: agent_backend.py  issue_tracker.py  vcs_backend.py
src/agency/domain/tests/: test_errors.py
src/agency/entrypoints/: cli.py
src/agency/entrypoints/tests/: test_cli.py
src/agency/features/analyze/: README.md  __init__.py  command.py  errors.py  parse.py  prompts.py
src/agency/features/fix/: README.md  __init__.py  branch_session.py  command.py  review.py
src/agency/io/: README.md  errors.py
src/agent_loop/: README.md  __init__.py  __main__.py  cli.py
src/agent_loop/_core/: __init__.py  config.py  logging.py  types.py
src/agent_loop/analyze/: __init__.py  command.py  parse.py
src/agent_loop/domain/: README.md  config.py  context.py  errors.py  protocols.py  types.py
src/agent_loop/features/: README.md
src/agent_loop/fix/: __init__.py  command.py  parse.py  review.py
src/agent_loop/io/: README.md  config.py  errors.py  process.py
tests/: test_config.py  test_engine.py
(+70 files in other folders)
