[project]
name = "agent-loop"
version = "0.1.0"
description = "Analyze a codebase for issues, fix them with AI review, open PRs."
requires-python = ">=3.14"
dependencies = ["PyYAML"]

[project.scripts]
agent-loop = "agent_loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "inline-snapshot[dirty-equals]>=0.32.5",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
